# CS3264

./: .gitignore  .gitmodules  README.md  anonymeter_privacy_eval.py  backend.py  basic_eval_pipeline.py  compare_feature_distributions.py  data_fairness.py  dquery.py  frontend.py  generate_data.py  main.py  multi_dataset_pipeline.py  package-lock.json  pipeline.py  preprocess.py  pyproject.toml  rag.py  requirements.txt  run.bat  run.sh  scaling_pipeline.py  shaple_eval_pipeline.py  synthetic_output.csv  tailwind.config.js  test_api.py
data/chroma_db/: chroma.sqlite3
data/features/: Age.txt  BMI.txt  BloodPressure.txt  DiabetesPedigreeFunction.txt  Glucose.txt  Insulin.txt  Outcome.txt  Pregnancies.txt  SkinThickness.txt  diabetes_Age.txt  diabetes_BMI.txt  diabetes_BloodPressure.txt  diabetes_DiabetesPedigreeFunction.txt  diabetes_Glucose.txt  diabetes_Insulin.txt  diabetes_Outcome.txt  diabetes_Pregnancies.txt  diabetes_SkinThickness.txt  diabetes_overview.txt  train_data_overview.txt
datasets/: diabetes_trimmed_rs41.csv  diabetes_trimmed_rs42.csv  trim_csv.py
evals/dataset/: diabetes_prediction_dataset.csv  pima-diabetes.csv
evals/models/: KNN.py  data_util.py  knn.py  mlp.py  naivebayes.py  randomforest.py  sgd.py  svm.py
frontend/: package-lock.json  package.json
frontend/src/: App.js  index.css  index.js  styles.css
multi_dataset_results/andrew_diabetes_eval/: comparison.csv  synthetic_metrics.csv
multi_dataset_results/pima-diabetes_eval/: comparison.csv  (+2 more)
results/: comparison.csv  original_metrics.csv  synthetic_metrics.csv  test_metrics.csv
(+123 files in other folders)
