[project]
name = "cs3264"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <=3.12"
dependencies = [
    "flask>=3.1.0",
    "groq>=0.20.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "openai>=1.68.2",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "streamlit>=1.43.2",
]
