[project]
name = "cs3264"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <=3.12"
dependencies = [
    "chromadb>=1.0.0",
    "flask>=3.1.0",
    "flask-cors>=5.0.1",
    "groq>=0.20.0",
    "llama-index>=0.12.28",
    "llama-index-embeddings-huggingface>=0.5.2",
    "llama-index-vector-stores-chroma>=0.4.1",
    "llama-index-vector-stores-faiss>=0.3.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "openai>=1.68.2",
    "optuna>=4.2.1",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "pygithub>=2.6.1",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "streamlit>=1.43.2",
]
